# PoAsyncWebFramework

./: .gitignore  Cargo.toml  readme.md
client/: Cargo.toml
client/src/: cli.rs  main.rs
client/src/cli/: run.rs
client/src/models/: payload.rs
client/src/services/: send.rs
client/src/tests/: integration_tests.rs  unit_tests.rs
server/: Cargo.toml
server/src/: main.rs  state.rs
server/src/handlers/: healthcheck_handler.rs  parameter_handler.rs  speech_handler.rs
server/src/models/: mod.rs  parameter.rs  speech.rs
server/src/modules/: mod.rs  tts.rs
server/src/routes/: routes.rs
server/src/tests/: integration_tests.rs  unit_tests.rs
src/: main.rs
src/handlers/: mod.rs
src/routes/: routes.rs
